<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthTipsActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="false"
        android:background="@drawable/gradient_1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Best Tips"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="30dp"
                />
        <TextView
            android:id="@+id/texttitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1. Eat a variety of foods"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tt1"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:textColor="#f26f11"
            />
        <TextView
            android:id="@id/texttitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Eat_a_variety_of_foods"
            android:layout_below="@+id/texttitle1"
            android:textColor="#f26f11"
            android:textSize="18dp"
            />
            <TextView
                android:id="@+id/texttitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. Base your diet on plenty of foods rich in carbohydrates"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/texttitle2"
                android:textSize="30dp"
                android:textColor="#0bd4cd"
                />
            <TextView
                android:id="@id/texttitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Base_your_diet_on_plenty_of_foods_rich_in_carbohydrates"
                android:layout_below="@+id/texttitle3"
                android:textSize="18dp"
                android:textColor="#0bd4cd"
                />
            <TextView
                android:id="@id/texttitle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="3. Replace saturated with unsaturated fat"
                android:layout_below="@+id/texttitle4"
                android:textSize="30dp"
                android:textColor="#d40b8a"
                />
            <TextView
                android:id="@+id/texttitle6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttitle5"
                android:textColor="#d40b8a"
                android:textSize="18dp"
                android:text="@string/Replace_saturated_with_unsaturated_fat"
                />

            <TextView
                android:id="@id/texttitle9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="4. Enjoy plenty of fruits and vegetables"
                android:layout_below="@+id/texttitle6"
                android:textSize="30dp"
                android:textColor="#7948f7"
                />
            <TextView
                android:id="@+id/texttitle10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttitle9"
                android:textSize="18dp"
                android:textColor="#7948f7"
                android:text="@string/Enjoy_plenty_of_fruits_and_vegetables"
                />

            <TextView
                android:id="@id/texttitle11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="5. Reduce salt and sugar intake"
                android:layout_below="@+id/texttitle10"
                android:textSize="30dp"
                android:textColor="#F38383"
                />
            <TextView
                android:id="@+id/texttitle12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttitle11"
                android:textColor="#F38383"
                android:textSize="18dp"
                android:text="@string/Reduce_salt_and_sugar_intake"
                />
            <TextView
                android:id="@id/texttitle13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="6. Eat regularly, control the portion size"
                android:layout_below="@+id/texttitle12"
                android:textSize="30dp"
                android:textColor="#228B22"
                />
            <TextView
                android:id="@+id/texttitle14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttitle13"
                android:textSize="18dp"
                android:textColor="#228B22"
                android:text="@string/Eat_regularly_control_the_portion_size"
                />
            <TextView
                android:id="@id/texttitle17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="7. Drink plenty of fluids"
                android:layout_below="@+id/texttitle14"
                android:textColor="#413BF7"
                android:textSize="30dp"
                />
            <TextView
                android:id="@+id/texttitle18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttitle17"
                android:textColor="#413BF7"
                android:textSize="18dp"
                android:text="@string/Drink_plenty_of_fluids"
                />
            <TextView
                android:id="@id/texttitle19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="8. Maintain a healthy body weight"
                android:layout_below="@+id/texttitle18"
                android:textSize="30dp"
                android:textColor="#FF69B4"
                />
            <TextView
                android:id="@+id/texttitle20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttitle19"
                android:textColor="#FF69B4"
                android:textSize="18dp"
                android:text="@string/Maintain_a_healthy_body_weight"
                />
            <TextView
                android:id="@id/texttitle21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="9. Get on the move, make it a habit!"
                android:layout_below="@+id/texttitle20"
                android:textSize="30dp"
                android:textColor="#CD5C5C"
                />
            <TextView
                android:id="@+id/texttitle22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttitle21"
                android:textColor="#CD5C5C"
                android:textSize="18dp"
                android:text="@string/Get_on_the_move_make_it_a_habit"
                />

            <TextView
                android:id="@id/texttitle23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="10. Start now! And keep changing gradually."
                android:layout_below="@+id/texttitle22"
                android:textColor="#6B8E23"
                android:textSize="30dp"
                />
            <TextView
                android:id="@+id/texttitle24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttitle23"
                android:textColor="#6B8E23"
                android:textSize="18dp"
                android:text="@string/Start_now_And_keep_changing_gradually"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>